retrieve rym album data

--- a/code/album-data-rym.ipynb
+++ b/code/album-data-rym.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,47 +30,128 @@
     "    ]\n",
     "def get_chart(url,pages=1):\n",
     "    RymNetwork = rymscraper.RymNetwork()\n",
-    "    list_rows = RymNetwork.get_chart_infos(url, max_page=pages)\n",
+    "    list_rows = RymNetwork.get_chart_infos(url)\n",
     "    return pd.DataFrame(list_rows, columns=columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "IP banned from rym. Can't do any requests to the website. Exiting.\n",
-      "Error scraping page https://rateyourmusic.com/charts/ : name 'exit' is not defined\n",
-      "IP banned from rym. Can't do any requests to the website. Exiting.\n",
-      "Error scraping page https://rateyourmusic.com/charts/top/album/1960 : name 'exit' is not defined\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/album-data-rym.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/album-data-rym.ipynb#ch0000002?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1960\u001b[39m,\u001b[39m2020\u001b[39m,\u001b[39m1\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/album-data-rym.ipynb#ch0000002?line=6'>7</a>\u001b[0m     top_albums_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([top_albums_df, get_chart(BASE_CHART_URI \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(i))])\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/album-data-rym.ipynb#ch0000002?line=7'>8</a>\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m120\u001b[39;49m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/1998 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/1999 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2000 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2001 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2002 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2003 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2004 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2005 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2006 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2007 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2008 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2009 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2010 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2011 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2012 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2013 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2014 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2015 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2016 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2017 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2018 : 'str' object has no attribute 'page'\n",
+      "Ratings : 'NoneType' object has no attribute 'text'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2019 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2020 : 'str' object has no attribute 'page'\n",
+      "Error scraping page https://rateyourmusic.com/charts/top/album/2021 : 'str' object has no attribute 'page'\n"
      ]
     }
    ],
    "source": [
-    "df1 = get_chart('https://rateyourmusic.com/charts/',2)\n",
     "BASE_CHART_URI = 'https://rateyourmusic.com/charts/top/album/'\n",
     "top_albums_df = pd.DataFrame()\n",
+    "df_list = []\n",
     "\n",
     "# get top albums from 1950-2020\n",
-    "for i in range(1960,2020,1):\n",
-    "    top_albums_df = pd.concat([top_albums_df, get_chart(BASE_CHART_URI + str(i))])\n",
-    "    time.sleep(120)"
+    "for i in range(1998,2022,1):\n",
+    "    try:\n",
+    "        df_list.append(get_chart(BASE_CHART_URI + str(i)))\n",
+    "        time.sleep(8)\n",
+    "    except:\n",
+    "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_albums = pd.concat(df_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_albums.to_csv('../data/rym-1998-2021.csv', sep='~')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv('../data/rym-1950-1971.csv', sep=',')\n",
+    "df2 = pd.read_csv('../data/rym-1972-1979.csv', sep=',')\n",
+    "df3 = pd.read_csv('../data/rym-1980-1997.csv', sep='~')\n",
+    "df4 = pd.read_csv('../data/rym-1998-2021.csv', sep='~')\n",
+    "dfs = [df1, df2, df3, df4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat(dfs).to_csv('../data/rym-1950-2021.csv', sep='~')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
