helper functions for data mapping

--- a/code/song-data-extraction.ipynb
+++ b/code/song-data-extraction.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import spotipy\n",
-    "from spotipy.oauth2 import SpotifyClientCredentials"
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +44,334 @@
     "]\n",
     "token = spotipy.util.prompt_for_user_token('sgtpepurr',SCOPES,client_id=CLIENT_ID,client_secret=CLIENT_SECRET,redirect_uri=REDIRECT_URI)\n",
     "sp = spotipy.Spotify(auth=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Album</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>RYM Rating</th>\n",
+       "      <th>Ratings</th>\n",
+       "      <th>Reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2470</th>\n",
+       "      <td>950</td>\n",
+       "      <td>30</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Nas</td>\n",
+       "      <td>Magic</td>\n",
+       "      <td>24 December 2021</td>\n",
+       "      <td>East Coast Hip Hop, Boom Bap</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>3041.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2471</th>\n",
+       "      <td>951</td>\n",
+       "      <td>31</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Effluence</td>\n",
+       "      <td>Psychocephalic Spawning</td>\n",
+       "      <td>13 December 2021</td>\n",
+       "      <td>Avant-Garde Metal, Brutal Death Metal, Technic...</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>480.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2472</th>\n",
+       "      <td>952</td>\n",
+       "      <td>32</td>\n",
+       "      <td>33</td>\n",
+       "      <td>岡部啓一 [Keiichi Okabe], 帆足圭吾 [Keigo Hoashi], 石濱翔...</td>\n",
+       "      <td>NieR Replicant ver.1.22474487139...</td>\n",
+       "      <td>21 April 2021</td>\n",
+       "      <td>Video Game Music, Cinematic Classical, Neoclas...</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>407.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2473</th>\n",
+       "      <td>953</td>\n",
+       "      <td>33</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Wild Up</td>\n",
+       "      <td>Julius Eastman Vol. 1: Femenine</td>\n",
+       "      <td>18 June 2021</td>\n",
+       "      <td>Minimalism, Chamber Music</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>1290.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2474</th>\n",
+       "      <td>954</td>\n",
+       "      <td>34</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Ad Nauseam</td>\n",
+       "      <td>Imperative Imperceptible Impulse</td>\n",
+       "      <td>12 February 2021</td>\n",
+       "      <td>Technical Death Metal, Avant-Garde Metal</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>2620.0</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2475</th>\n",
+       "      <td>955</td>\n",
+       "      <td>35</td>\n",
+       "      <td>36</td>\n",
+       "      <td>DJ Sabrina the Teenage DJ</td>\n",
+       "      <td>The Makin' Magick II Album</td>\n",
+       "      <td>26 November 2021</td>\n",
+       "      <td>Outsider House</td>\n",
+       "      <td>3.65</td>\n",
+       "      <td>1099.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2476</th>\n",
+       "      <td>956</td>\n",
+       "      <td>36</td>\n",
+       "      <td>37</td>\n",
+       "      <td>STOMACH BOOK</td>\n",
+       "      <td>STOMACH BOOK</td>\n",
+       "      <td>8 October 2021</td>\n",
+       "      <td>Experimental Rock, Noise Pop, Emo</td>\n",
+       "      <td>3.66</td>\n",
+       "      <td>606.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2477</th>\n",
+       "      <td>957</td>\n",
+       "      <td>37</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Skee Mask</td>\n",
+       "      <td>Pool</td>\n",
+       "      <td>7 May 2021</td>\n",
+       "      <td>IDM, Breakbeat, Techno</td>\n",
+       "      <td>3.64</td>\n",
+       "      <td>2604.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2478</th>\n",
+       "      <td>958</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39</td>\n",
+       "      <td>McKinley Dixon</td>\n",
+       "      <td>For My Mama and Anyone Who Look Like Her</td>\n",
+       "      <td>7 May 2021</td>\n",
+       "      <td>Jazz Rap, Southern Hip Hop, Conscious Hip Hop</td>\n",
+       "      <td>3.64</td>\n",
+       "      <td>1773.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2479</th>\n",
+       "      <td>959</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Jaubi</td>\n",
+       "      <td>Nafs at Peace</td>\n",
+       "      <td>28 May 2021</td>\n",
+       "      <td>Spiritual Jazz, Jazz Fusion</td>\n",
+       "      <td>3.65</td>\n",
+       "      <td>1965.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0.1  Unnamed: 0  Rank  \\\n",
+       "2470           950          30    31   \n",
+       "2471           951          31    32   \n",
+       "2472           952          32    33   \n",
+       "2473           953          33    34   \n",
+       "2474           954          34    35   \n",
+       "2475           955          35    36   \n",
+       "2476           956          36    37   \n",
+       "2477           957          37    38   \n",
+       "2478           958          38    39   \n",
+       "2479           959          39    40   \n",
+       "\n",
+       "                                                 Artist  \\\n",
+       "2470                                                Nas   \n",
+       "2471                                          Effluence   \n",
+       "2472  岡部啓一 [Keiichi Okabe], 帆足圭吾 [Keigo Hoashi], 石濱翔...   \n",
+       "2473                                            Wild Up   \n",
+       "2474                                         Ad Nauseam   \n",
+       "2475                          DJ Sabrina the Teenage DJ   \n",
+       "2476                                       STOMACH BOOK   \n",
+       "2477                                          Skee Mask   \n",
+       "2478                                     McKinley Dixon   \n",
+       "2479                                              Jaubi   \n",
+       "\n",
+       "                                         Album              Date  \\\n",
+       "2470                                     Magic  24 December 2021   \n",
+       "2471                   Psychocephalic Spawning  13 December 2021   \n",
+       "2472       NieR Replicant ver.1.22474487139...     21 April 2021   \n",
+       "2473           Julius Eastman Vol. 1: Femenine      18 June 2021   \n",
+       "2474          Imperative Imperceptible Impulse  12 February 2021   \n",
+       "2475                The Makin' Magick II Album  26 November 2021   \n",
+       "2476                              STOMACH BOOK    8 October 2021   \n",
+       "2477                                      Pool        7 May 2021   \n",
+       "2478  For My Mama and Anyone Who Look Like Her        7 May 2021   \n",
+       "2479                             Nafs at Peace       28 May 2021   \n",
+       "\n",
+       "                                                 Genres  RYM Rating  Ratings  \\\n",
+       "2470                       East Coast Hip Hop, Boom Bap        3.67   3041.0   \n",
+       "2471  Avant-Garde Metal, Brutal Death Metal, Technic...        3.63    480.0   \n",
+       "2472  Video Game Music, Cinematic Classical, Neoclas...        3.61    407.0   \n",
+       "2473                          Minimalism, Chamber Music        3.67   1290.0   \n",
+       "2474           Technical Death Metal, Avant-Garde Metal        3.63   2620.0   \n",
+       "2475                                     Outsider House        3.65   1099.0   \n",
+       "2476                  Experimental Rock, Noise Pop, Emo        3.66    606.0   \n",
+       "2477                             IDM, Breakbeat, Techno        3.64   2604.0   \n",
+       "2478      Jazz Rap, Southern Hip Hop, Conscious Hip Hop        3.64   1773.0   \n",
+       "2479                        Spiritual Jazz, Jazz Fusion        3.65   1965.0   \n",
+       "\n",
+       "      Reviews  \n",
+       "2470     39.0  \n",
+       "2471     11.0  \n",
+       "2472      5.0  \n",
+       "2473      9.0  \n",
+       "2474     30.0  \n",
+       "2475      4.0  \n",
+       "2476      2.0  \n",
+       "2477     13.0  \n",
+       "2478     21.0  \n",
+       "2479      9.0  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read rym data\n",
+    "rym_df = pd.read_csv('../data/rym-1950-2021.csv', sep='~')\n",
+    "rym_df.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the most matching spotify album from the \n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "SIM_THRES = 0.8\n",
+    "\n",
+    "def get_word_freq(l):\n",
+    "    d = defaultdict(int)\n",
+    "    for w in l:\n",
+    "        d[w] += 1\n",
+    "    return d\n",
+    "\n",
+    "def freq_match(d1,d2):\n",
+    "    n = len(d1)\n",
+    "    sim = 0\n",
+    "    for k,v in d1.items():\n",
+    "        if k in d2 and d2[k] == v:\n",
+    "            sim += 1\n",
+    "    return sim/n\n",
+    "\n",
+    "\n",
+    "def are_same_albums(s1,s2):\n",
+    "    s1 = s1.lower()\n",
+    "    s2 = s2.lower()\n",
+    "    freq1 = get_word_freq(s1.split(' '))\n",
+    "    freq2 = get_word_freq(s2.split(' '))\n",
+    "    sim1 = freq_match(freq1, freq2)\n",
+    "    sim2 = freq_match(freq2, freq1)\n",
+    "    if max(sim1,sim2) >= SIM_THRES:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def get_spotify_album(name):\n",
+    "    search_res = sp.search(q=name, type='album')\n",
+    "    if are_same_albums(search_res['albums']['items'][0]['name'], name):\n",
+    "        return search_res['albums']['items'][0]['uri']\n",
+    "    else:\n",
+    "        print(search_res['albums']['items'][0]['name'])\n",
+    "        print(name)\n",
+    "        \n",
+    "\n",
+    "def get_album_tracks(album_id):\n",
+    "    tracks = []\n",
+    "    for track in sp.album_tracks(album_id=album_id)['items']:\n",
+    "        tracks.append(track['uri'])\n",
+    "    return sp.tracks(tracks=tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "album_id = get_spotify_album('The Dark Side of the Moon')\n",
+    "tracks = get_album_tracks(album_id=album_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in rym_df.iterrows():\n",
+    "    search_res = sp.search(q=row['Album'], type='album')\n",
+    "    search_res = search_res['albums']['items']"
    ]
   }
  ],
